bootstrap on phone improvements

--- a/src/parks.less
+++ b/src/parks.less
@@ -1,15 +1,17 @@
 body {
 	background: #222;
 }
-table caption {background: #fff;}
-td {
-	width: 50px;
-	height: 50px;
-	color: #fff;
-	border: 1px solid #ccc;
-	text-align: center;
-	vertical-align: middle;
-	cursor: pointer;
+table {
+	caption {background: #fff;}
+	td {
+		width: 50px;
+		height: 50px;
+		color: #fff;
+		border: 1px solid #ccc;
+		text-align: center;
+		vertical-align: middle;
+		cursor: pointer;
+	}
 }
 .fa-tree {
 	color: #0c0;
@@ -33,3 +35,4 @@ td {
 .action-bar {
 	margin-top: 20px;
 }
+.form-inline label {color: #fff;}
