--- a/src/parks.less
+++ b/src/parks.less
@@ -31,6 +31,8 @@ table {
 .color4 {background-color: #0b0}
 .color5 {background-color: #888}
 .color6 {background-color: #0c8}
+.color7 {background-color: #ee2}
+.color8 {background-color: #c62}
 
 .action-bar {
 	margin-top: 20px;
