--- a/src/parks.less
+++ b/src/parks.less
@@ -31,8 +31,12 @@ table {
 .color4 {background-color: #0b0}
 .color5 {background-color: #888}
 .color6 {background-color: #ee2}
-.color7 {background-color: #c62}
+.color7 {background-color: #e82}
 .color8 {background-color: #222}
+.color9 {background-color: #952}
+.color10 {background-color: #fbb}
+.color11 {background-color: #bbf}
+.color12 {background-color: #bfb}
 
 .action-bar {
 	margin-top: 20px;
