--- a/src/parks.less
+++ b/src/parks.less
@@ -30,9 +30,9 @@ table {
 .color3 {background-color: #80c}
 .color4 {background-color: #0b0}
 .color5 {background-color: #888}
-.color6 {background-color: #0c8}
-.color7 {background-color: #ee2}
-.color8 {background-color: #c62}
+.color6 {background-color: #ee2}
+.color7 {background-color: #c62}
+.color8 {background-color: #222}
 
 .action-bar {
 	margin-top: 20px;
