Create your own puzzles!

--- a/src/parks.less
+++ b/src/parks.less
@@ -25,18 +25,18 @@ table {
 .fa-square-o {visibility: hidden;}
 .btn-group {padding-left: 0;}
 
-.color1 {background-color: #d00}
-.color2 {background-color: #00d}
-.color3 {background-color: #80c}
-.color4 {background-color: #0b0}
-.color5 {background-color: #888}
-.color6 {background-color: #ee2}
-.color7 {background-color: #e82}
-.color8 {background-color: #222}
-.color9 {background-color: #952}
-.color10 {background-color: #fbb}
-.color11 {background-color: #bbf}
-.color12 {background-color: #bfb}
+.color1 {background-color: red}
+.color2 {background-color: blue}
+.color3 {background-color: blueviolet}
+.color4 {background-color: orange}
+.color5 {background-color: limegreen}
+.color6 {background-color: gray}
+.color7 {background-color: yellow}
+.color8 {background-color: midnightblue}
+.color9 {background-color: sienna}
+.color10 {background-color: darkmagenta}
+.color11 {background-color: thistle}
+.color12 {background-color: palegreen}
 
 .action-bar {
 	margin-top: 20px;
