added tree icon

--- a/src/parks.less
+++ b/src/parks.less
@@ -11,6 +11,11 @@ table {
 		text-align: center;
 		vertical-align: middle;
 		cursor: pointer;
+		background-size: 60%;
+		background-repeat: no-repeat;
+		background-position: 50%;
+
+		&.tree {background-image: url('tree-icon.png');}
 	}
 }
 .fa-tree {
