--- a/src/parks.less
+++ b/src/parks.less
@@ -43,6 +43,8 @@ table {
 .color11 {background-color: thistle}
 .color12 {background-color: palegreen}
 
+.top-buffer {margin-top: 10px;}
+
 .action-bar {
 	margin-top: 20px;
 }
