rules page, image of trees, and more

--- a/src/parks.less
+++ b/src/parks.less
@@ -49,3 +49,19 @@ table {
 	margin-top: 20px;
 }
 .form-inline label {color: #fff;}
+*[ng-click] {cursor: pointer;}
+
+#intro-view {
+	text-align: center;
+}
+#rules-view {
+	color: #fff;
+
+	h2, h3 {text-align: center;}
+}
+#puzzle-view {
+	.tree-display img {
+		max-width: 30px;
+		float: right;
+	}
+}
